Fixes spacing in info view

--- a/dcc-portal-ui/src/main/js/app/styles/_modules/_pathwayviewer.scss
+++ b/dcc-portal-ui/src/main/js/app/styles/_modules/_pathwayviewer.scss
@@ -420,6 +420,10 @@ $compartmentBorder:#ffc38b;
     .pathway-gene-table{
       margin:4rem auto; 
     }
+  }
+  
+  .subpath-link {
+    padding-top:4rem;
   }  
 }
 
@@ -434,7 +438,11 @@ $compartmentBorder:#ffc38b;
     .pathway-gene-table{
       margin:4rem auto; 
     }
-  }   
+  }
+  
+  .subpath-link {
+    padding-top:4rem;
+  }     
 }
 
 :fullscreen {
@@ -448,7 +456,11 @@ $compartmentBorder:#ffc38b;
     .pathway-gene-table{
       margin:4rem auto; 
     }
-  }  
+  }
+  
+  .subpath-link {
+    padding-top:4rem;
+  }    
 }
 
 /**
